test/correct/InfixDefaultAssoc.hs
module InfixDefaultAssoc where

main :: Int
main = 3 + 4 + 4
