test/typeerrors/Examples/PatLiteral.hs
module PatLiteral where

f :: Bool -> Int
f 1 = 1
